[project]
name = "replaysam"
version = "0.1.0"
description = "Codebase for ReplaySAM: Interactive Particle Segmentation by Replaying Volume as Video Across Orthogonal Views"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numba>=0.62.0",
    "triton>=3.5.0",
    "edt>=3.0.0",
    "scipy>=1.16.0",
    "numpy>=2.4.0",
    "tqdm>=4.66.1",
    "hydra-core>=1.3.2",
    "iopath>=0.1.10",
    "pillow>=12.0.0",
    "opencv-python>=4.7.0",
    "eva-decord>=0.6.1",
    "acvl-utils>=0.2.3,<0.3",  # 0.3 may bring breaking changes. Careful!
    "batchgenerators>=0.25.1",
    "setuptools>=81.0.0",
    "dask-image>=2026.5.0",
    "dask[complete]>=2026.3.0",
    "h5py>=3.15.0",
    "h5netcdf>=1.7.0",
    "pyyaml>=6.0.3",
    "ipykernel>=7.3.0",
    "nibabel>=5.3.0",
    "tifffile>=2026.1.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "xarray>=2026.3.0",
    "cupy-cuda12x[ctk]>=14.1.1",
    "zarr>=3.2.1",
    "matplotlib>=3.11.0",
]

[tool.setuptools.packages.find]
where = [".", "replaysam/models"]
include = ["replaysam*", "sam2*"]

[tool.setuptools.package-data]
sam2 = ["**/*.yaml"]
